# AeroAgent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/aeroagent/: __init__.py  agent.py  llm.py  state.py  tracer.py
src/aeroagent/api/: __init__.py  main.py  schemas.py
src/aeroagent/evals/: __init__.py  dataset.py  judge.py  runner.py
src/aeroagent/memory/: __init__.py  embedder.py  memory.py  store.py
src/aeroagent/observability/: __init__.py  metrics.py
src/aeroagent/prompts/: __init__.py  registry.py
src/aeroagent/tools/: __init__.py  memory.py  registry.py  search.py
tests/: __init__.py  test_agent.py  test_agent_loop.py  test_evals.py  test_memory.py
