[project]
name = "aeroagent"
version = "0.1.0"
description = "Async AI agent framework built with raw Python, asyncio, and Pydantic"
requires-python = ">=3.13.2"
dependencies = [
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = ["E", "F", "I", "UP", "B", "SIM"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"