[project]
name = "aeroagent"
version = "0.1.0"
description = "Async AI agent framework built with raw Python, asyncio, and Pydantic"
requires-python = ">=3.13.2"
dependencies = [
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.2.0",
    "rich>=13.7.0",
    "chromadb>=0.5.0", # Local vector database
    "sentence-transformers>=3.0.0", # Local embedding model
    "torch>=2.0.0", # for MPS on Apple Silicon
    "numpy>= 1.24.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = ["E", "F", "I", "UP", "B", "SIM"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"